@@ -706,6 +706,29 @@
            </spacer>
           </item>
           <item>
+           <widget class="drumkv1widget_spin" name="Out1FxSendKnob">
+            <property name="toolTip">
+             <string>OUT FX Send</string>
+            </property>
+            <property name="text">
+             <string>FX</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint">
+             <size>
+              <width>8</width>
+              <height>8</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
            <widget class="drumkv1widget_spin" name="Out1VolumeKnob">
             <property name="toolTip">
              <string>OUT Volume</string>
